etc/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: squirrel-core
  namespace: game
spec:
  selector:
    app: squirrel-core
  ports:
    - port: 80
      targetPort: 9221
