etc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: squirrel-core
  namespace: game
spec:
  ingressClassName: nginx
  rules:
    - host: api.lakeofcolors.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: squirrel-core
                port:
                  number: 80
